--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: The-Sisters-Volume-4_5464
-_version: 0.2.0
+_version: 0.2.1
 contributor:
   translator:
     agent_name: Bell, Clara
@@ -35,5 +35,6 @@ subjects:
 - !lcsh 'Egypt -- History -- 332-30 B.C. -- Fiction'
 - !lcsh 'German fiction -- Translations into English'
 - !lcc 'PT'
+- GITenberg
 title: The Sisters — Volume 4
 url: http://www.gutenberg.org/ebooks/5464
